[project]
name = "processamentoassicronosii"
version = "0.1.0"
description = ""
authors = [
    {name = "Vital.Guilherme",email = "guilhermev.j.santos@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.129.0,<0.130.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "uvicorn (>=0.40.0,<0.41.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
